--- a/pos_app/pos/package.json
+++ b/pos_app/pos/package.json
@@ -12,6 +12,8 @@
     "chart.js": "^4.4.6",
     "date-fns": "^2.29.3",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
